--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-redux": "^7.1.24",
     "@types/redux": "^3.6.0",
     "@types/uuid": "^8.3.4",
+    "axios": "^0.27.2",
     "gh-pages": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
